# Imagina-AI

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Procfile  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
TTS/: audio_generation_pipeline.py
TTS/vibevoice/: __init__.py
configs/: models.yaml
core/: config.py  errors.py  fastwan_utils.py  job_queue.py  kokoro_tts_utils.py  logger_utils.py  model_manager.py  protocols.py  registry.py  replicate_client.py  static_file_serve_api.py  storage.py  trimmer_utils.py  types.py  utils.py  worker_client.py  worker_config.py  yt_downloader_utils.py
docs/: README.md  architecture.md  audio-pipeline.md  core.md  extending.md  memory-management.md  registry-and-models.md  roadmap.md  ui.md  worker.md
docs/_archive/: README.md
docs/pipelines/: README.md  cinematic.md  srt.md
docs/services/: README.md  image.md  lipsync.md  llm.md  media.md  tts.md  video.md
pipelines/: cinematic.py  srt.py
samples/: sample.txt
scripts/: doctor.py  download_models.py
server/: static.py
services/image/: service.py
services/lipsync/: service.py
services/llm/: parser.py  prompts.py  service.py
services/media/: merger.py  trimmer.py  watermark.py  youtube.py
services/tts/: service.py
services/video/: service.py
ui/: sidebar.py  theme.py
ui/components/: storyboard_gallery.py  tier_picker.py
ui/tabs/: cinematic.py  merge.py  (+3 more)
worker/: __init__.py  jobs.py  main.py  schemas.py
(+31 files in other folders)
