[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "imagina-ai"
version = "0.1.0-dev"
description = "Cinematic AI video studio — three-tier (local OSS / cloud OSS / API) generation pipeline."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

# Runtime deps live in requirements.txt during the refactor.
# Once Phase 1 stabilises the module boundaries, deps move here with
# proper version pins and optional-dependency groups per tier.
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.ruff]
line-length = 100
target-version = "py310"
